--- a/A.tex
+++ b/A.tex
@@ -4,7 +4,7 @@ Examples include everything from adhesive bandages, stents, artificial joints, d
 To take one example of the societal impact of medical devices, an estimated 3 million people worldwide have implanted cardiac pacemakers (a heart rate adjustment device), with 600,000 added annually.
 Clinical trials have presented evidence that patients implanted with cardiac defibrillators (another heart rate adjustment device) have a mortality rate reduced by up to 31\%.
 % MADIT II trial
-Implanted cardiac pacemakers and defibrillators have approximately 80,000-100,000 lines of software code which essentially makes all sensing, control and actuation decisions autonomously within the human body, over the 5-7 year device lifetime~\cite{pauljones}. With the increasing complexity of combining hardware and software in a large class of these life-saving technologies, there is an urgent need for approaches to rigorously verify the device and therapy to be safe and efficacious.
+Implanted cardiac pacemakers and defibrillators have approximately 80,000-100,000 lines of software code which essentially makes all sensing, control and actuation decisions autonomously within the human body, over the 5-7 year device lifetime (\cite{pauljones}). With the increasing complexity of combining hardware and software in a large class of these life-saving technologies, there is an urgent need for approaches to rigorously verify the device and therapy to be safe and efficacious.
 
 The US Food and Drug Administration defines a medical device as an instrument, apparatus, implement, machine, or implant which is:
 \begin{itemize}
