--- a/bibliography.bib
+++ b/bibliography.bib
@@ -502,6 +502,15 @@ year = {2014},
  year = {1989},
  pages = {372--405},
 } 
+@article{Bogdan,
+ author = {Bogdan, Paul and Jain, Siddharth and Marculescu, Radu},
+ title = {Pacemaker Control of Heart Rate Variability: A Cyber Physical System Perspective},
+ journal = {ACM Trans. Embed. Comput. Syst.},
+ volume = {12},
+ number = {1s},
+ year = {2013},
+ pages = {50:1--50:22},
+} 
 @article{fiber,
 author="{EW Hsu and CS Henriquez}",
 title="{Myocardial fiber orientation mapping using reduced-encoding diffusion tensor imaging}",
